[gd_scene load_steps=3 format=3 uid="uid://platform001"]

[ext_resource type="Script" path="res://scripts/entities/platform.gd" id="1_platform"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_platform"]
size = Vector2(150, 20)

[node name="Platform" type="StaticBody2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_platform")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_platform")

[node name="PlatformVisual" type="ColorRect" parent="."]
offset_left = -75.0
offset_top = -10.0
offset_right = 75.0
offset_bottom = 10.0
color = Color(0.3, 0.3, 0.4, 1)

[node name="BuildingContainer" type="Node2D" parent="."]

[node name="LandingZone" type="Area2D" parent="."]
position = Vector2(0, -30)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandingZone"]
shape = SubResource("RectangleShape2D_platform")

[node name="NameLabel" type="Label" parent="."]
offset_left = -75.0
offset_top = -40.0
offset_right = 75.0
offset_bottom = -20.0
text = "PLATFORM"
horizontal_alignment = 1

[node name="PassengerSpawn" type="Marker2D" parent="."]
position = Vector2(-30, -20)
